--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <input
     id="repoInput"
     type="text"
-    placeholder="owner/repo (e.g. facebook/react)"
+    placeholder="owner/repo"
   />
 
   <button onclick="analyzeRepo()">Analyze Repository</button>
@@ -23,4 +23,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
